tests/integration/errors/010_dash_in_object.nesl
<<<<<<<<<nesl
{
  key = R"""pv(valid)pv"""
  - R"""pv(not allowed)pv"""
  another = R"""pv(ok)pv"""
}
=========nesl